--- a/src/app/recipes-app/components/shopping-lists-overview/shopping-lists-overview.component.html
+++ b/src/app/recipes-app/components/shopping-lists-overview/shopping-lists-overview.component.html
@@ -1,3 +1,4 @@
+<h1>My shopping lists</h1>
 <div class="accordion accordion-flush" id="accordionFlushExample">
     <app-shopping-list *ngFor="let shoppingList of shoppingLists" [shoppingList]="shoppingList"></app-shopping-list>
 </div>
