--- a/src/app/recipes-app/components/main/main.component.html
+++ b/src/app/recipes-app/components/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col">
             <app-shopping-lists-overview></app-shopping-lists-overview>
@@ -10,4 +10,7 @@
             <app-recipe-creator (onAddRecipe)="addRecipe($event)"></app-recipe-creator>
         </div>
     </div>
-</div>
+</div> -->
+<div><a routerLink="/shoppinglist">My Shopping Lists</a></div>
+<div><a routerLink="/recipes">My Recipes</a></div>
+<div><a routerLink="/recipes">Browse Recipes</a></div>
