--- a/src/app/recipes-app/components/recipe-creator/recipe-creator.component.html
+++ b/src/app/recipes-app/components/recipe-creator/recipe-creator.component.html
@@ -1,15 +1,15 @@
-<!-- <h1>Recipe creator</h1> -->
+<h1>Recipe creator</h1>
 <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
 
     <div class="form-floating my-2">
         <input type="text" class="form-control" id="name" placeholder="name" value="" name="name"
             formControlName="name">
-        <label for="name">name</label>
+        <label for="name">Recipe name</label>
     </div>
 
-    <div class="row">
+    <div class="row my-4">
         <div class="col">Add Multiple ingredients:</div>
-        <div class="col"><button type="button" (click)="addIngredient()" class="btn btn-primary">Add More</button></div>
+        <div class="col"></div>
     </div>
     <div formArrayName="ingredients">
         <div class="row my-2" *ngFor="let ingredient of ingredients().controls; let i=index" [formGroupName]="i">
@@ -38,11 +38,14 @@
             <div class="col"><button (click)="removeIngredient(i)" class="btn btn-danger">Remove</button></div>
         </div>
     </div>
-    <div class="row">
-        <div class="col"><button type="submit" class="btn btn-primary">Submit</button></div>
-        <div class="col"><button class="btn btn-secondary">Add ingredient</button> </div>
-        <div class="col"><button class="btn btn-danger">clear</button></div>
+    <div class="my-2">
+        <button type="button" (click)="addIngredient()" class="btn btn-primary">Add more
+            ingredients</button>
+    </div>
+    <div class="my-2">
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button class="btn btn-danger mx-2">clear</button>
     </div>
 </form>
 
-{{this.productForm.value | json}}
+<!-- {{this.productForm.value | json}} -->
